--- a/include/moondance/version.h.in
+++ b/include/moondance/version.h.in
@@ -4,7 +4,6 @@
 #ifndef MD_VERSION_H
 #define MD_VERSION_H
 
-#define MD_VERSION "1.0.2"
+#define MD_VERSION "@MD_VERSION@"
 
 #endif // MD_VERSION_H
-
