--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 4.0)
 
-project(MoonvTestPackage)
+project(MoondanceTestPackage)
 
 find_package(moondance REQUIRED)
 
