--- a/include/moondance/version.h.in
+++ b/include/moondance/version.h.in
@@ -4,6 +4,8 @@
 #ifndef MD_VERSION_H
 #define MD_VERSION_H
 
-#define MD_VERSION "@MD_VERSION@"
+#define MD_VERSION_MAJOR @CMAKE_PROJECT_VERSION_MAJOR@
+#define MD_VERSION_MINOR @CMAKE_PROJECT_VERSION_MINOR@
+#define MD_VERSION_PATCH @CMAKE_PROJECT_VERSION_PATCH@
 
 #endif /* MD_VERSION_H */
